# rust-coding

./: Cargo.toml  README.md  note1.md
async_test/examples/: test.rs
async_test/src/: main.rs
big_program/: Cargo.toml
big_program/crates/cli/: Cargo.toml
big_program/crates/cli/src/: main.rs  module.wasm
big_program/crates/my-lib/: Cargo.toml
big_program/crates/my-lib/src/: error.rs  lib.rs
bitflags_test/: Cargo.toml
bitflags_test/src/: main.rs
jsparser/: Cargo.toml
jsparser/examples/: jsparser.rs
jsparser/src/: lib.rs
log_tracing/: Cargo.toml  README.md
log_tracing/examples/: log.rs  tracing.rs  tracing2.rs
log_tracing/tmp/: tracing.log.2023-09-15
macro_coding/examples/: macro_coding.rs  monkeys.in  spanish.in
macro_custom_coding/: Cargo.toml  README.md
macro_custom_coding/examples/: macro-command.rs  macro_custom_coding.rs  query.rs
macro_custom_coding/src/: lib.rs  raw_builder.rs
reqwest_test/: Cargo.toml  README.md
