[package]
name = "log_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.3" }
tracing-appender = "0.2.0"
chrono = "0.4.19"
